2015-03-31  Eli Zaretskii  <eliz@gnu.org>

	* keyboard.c (read_key_sequence): Don't let
	this_single_command_key_start become negative.  (Bug#20223)

2015-03-29  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (xg_display_open):
	* xterm.c (x_display_ok, x_term_init): Block SIGIO when opening
	a display (Bug#19175).

2015-03-29  Martin Rudalics  <rudalics@gmx.at>

	* gtkutil.c (update_theme_scrollbar_width): Don't round up
	scroll bar width with GTK3 (Bug#20182).

2015-03-28  Jan Djärv  <jan.h.d@swipnet.se>

	* xsmfns.c (smc_save_yourself_CB): Return if Vinvocation_name or
	user_login_name are not strings.

2015-03-28  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (sys_connect): Fix a mistake in previous commit that broke
	blocking connections.  (Bug#20159)

2015-03-27  Paul Eggert  <eggert@cs.ucla.edu>

	Avoid some core dumps in X session management
	Derived from a bug report by Nicolas Richard in:
	http://bugs.gnu.org/20191#20
	* xsmfns.c (smc_save_yourself_CB): Don't dump core if
	invocation-name is not a string.  Initialize user-login-name if it
	is not already initialized, and don't dump core if it is not a
	string.
	(create_client_leader_window): Don't dump core if x-resource-name
	and x-resource-class are not both strings.
	(x_session_initialize): Don't dump core if x-session-previous-id,
	invocation-directory, and invocation-name are not strings.

	Port user-login-name initialization to Qnil == 0
	Derived from a bug report by Nicolas Richard in:
	http://bugs.gnu.org/20191#20
	* editfns.c (Fuser_login_name, Fuser_real_login_name)
	(syms_of_editfns): Don't rely on all-bits-zero being an Elisp integer,
	as this is no longer true now that Qnil == 0.

	Assume !BROKEN_NON_BLOCKING_CONNECT
	From a suggestion by Eli Zaretskii in:
	http://lists.gnu.org/archive/html/emacs-devel/2015-03/msg00824.html
	* process.c (NON_BLOCKING_CONNECT): Simplify by assuming that
	BROKEN_NON_BLOCKING_CONNECT is not defined.
	(SELECT_CAN_DO_WRITE_MASK): Remove, and assume it's now true.
